tests/invalid/simple/Return_CompileFail_1.whiley
bool f():
    return 1
